Make calculation of document marker's rendered rect on demand

Currently, when adding a document marker, we calculate its rendered
rectangle synchronously by calling updateMarkerRenderedRect in
DocumentMarkerController::addMarker.

This is not needed, since when we retrieve the rendered rectangles
(only possible via DMC::renderedRectsForMarkers),
updateMarkerRenderedRectIfNeed is also called, calculating the marker's
rendered rectangle if we haven't done it before.

Hence, this patch removes the updateMarkerRenderedRect call from
DMC::addMarker as a performance improvement.

BUG=668408

Review-Url: https://codereview.chromium.org/2557563003
Cr-Commit-Position: refs/heads/master@{#436553}

Former-commit-id: f6763007a1508ccbff5f635202c950367769855e